<resources>
    <string name="app_name">seminar</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go_to_register">Go to Register</string>
    <string name="login_image">Login Image</string>
    <string name="exit">Exit</string>
    <string name="return_to_main_manu">Return to Main Menu</string>
</resources>
